<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, PackItActivity!</string>
    <string name="app_name">PackIt</string>
    <string name="hint">Trip Name</string>
    <string name="settings">Settings</string>
    <string name="packing_tips">Packing Tips</string>
    <string name="pack">Pack</string>
    <string name="home">Home</string>
    <string name="settings_prompt">Select a trip</string>

</resources>